--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,7 +5,7 @@ version: '1.0'
 
 # This setting configures which "profile" dbt uses for this project.
 # Profiles contain database connection information and should be configured in ~/.dbt/profiles.yml file
-profile: 'big-query'
+profile: 'clickhouse'
 
 # These configurations specify where dbt should look for different types of files.
 model-paths: ['models']
