--- a/src/dbt/manifests/statefulset.yml
+++ b/src/dbt/manifests/statefulset.yml
@@ -1,33 +1,29 @@
-#apiVersion: apps/v1
-#kind: StatefulSet
-#metadata:
-#  name: clickhouse
-#spec:
-#  serviceName: "not-applicable"
-#  selector:
-#    matchLabels:
-#      app: clickhouse
-#  template:
-#    metadata:
-#      labels:
-#        app: clickhouse
-#    spec:
-#      containers:
-#        - name: clickhouse
-#          image: slowsunday/fulljoin-clickhouse:latest
-#          ports:
-#            - name: http
-#              protocol: TCP
-#              containerPort: 8123
-#          envFrom:
-#            - configMapRef:
-#                name: clickhouse-configmap
-#            - secretRef:
-#                name: clickhouse-secret
-#          volumeMounts:
-#            - mountPath: "/var/lib/clickhouse"
-#              name: clickhouse-volume
-#      volumes:
-#        - name: clickhouse-volume
-#          persistentVolumeClaim:
-#            claimName: clickhouse-vol
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: dbt
+spec:
+  serviceName: "not-applicable"
+  selector:
+    matchLabels:
+      app: dbt
+  template:
+    metadata:
+      labels:
+        app: dbt
+    spec:
+      containers:
+        - name: dbt
+          image: slowsunday/fulljoin:latest
+          envFrom:
+            - configMapRef:
+                name: dbt-configmap
+            - secretRef:
+                name: dbt-secret
+          volumeMounts:
+            - mountPath: "/dbt"
+              name: dbt-volume
+      volumes:
+        - name: dbt-volume
+          persistentVolumeClaim:
+            claimName: dbt-pvc
