--- a/src/dbt/profiles.yml
+++ b/src/dbt/profiles.yml
@@ -4,8 +4,8 @@ clickhouse:
     dev:
       type: clickhouse
       schema: default
-      host: "{{ env_var('CLICKHOUSE_SERVICE_HOST') }}"
-      port: 8123
-      user: default
+      host: clickhouse
+      port: "{{ env_var('CLICKHOUSE_SERVICE_PORT') | int }}"
+      user: admin
       password: ''
       secure: False
