--- a/clickhouse_spec/templates/secret.yaml
+++ b/clickhouse_spec/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "clickhouse.fullname" . }}
+  name: {{ include "clickhouse.fullname" . }}-server-secret
   labels:
     app.kubernetes.io/name: {{ include "clickhouse.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
