--- a/dbt_spec/values.yaml
+++ b/dbt_spec/values.yaml
@@ -18,7 +18,7 @@ dbt:
   configmap:
     enabled: true
     name: dbt-config
-    svcHost: clickhouse
+    svcHost: clickhouse-service
     port: "8000"
 
   # Service configuration
