--- a/clickhouse_spec/templates/service.yaml
+++ b/clickhouse_spec/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: clickhouse
+  name: {{ include "clickhouse.fullname" . }}-service
   labels:
-    app.kubernetes.io/name: clickhouse
+    app.kubernetes.io/name: {{ include "clickhouse.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   namespace: {{ .Values.namespace }}
