--- a/dbt_spec/templates/configmap.yaml
+++ b/dbt_spec/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "dbt.fullname" . }}
+  name: {{ include "dbt.fullname" . }}-config
   labels:
     app.kubernetes.io/name: {{ include "dbt.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
