--- a/dbt_spec/templates/service.yaml
+++ b/dbt_spec/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "dbt.fullname" . }}
+  name: {{ include "dbt.fullname" . }}-service
   labels:
     app.kubernetes.io/name: {{ include "dbt.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
